<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_loadout"
        android:icon="@drawable/ic_loadout_combat"
        android:title="@string/title_loadout" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_backpack"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_skills"
        android:icon="@drawable/ic_skills"
        android:title="@string/title_skills" />

    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/ic_hamburger"
        android:title="@string/title_other" />

</menu>