<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_choose_character">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pecawolf.charactersheet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.pecawolf.charactersheet.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_skills"
        android:name="com.pecawolf.charactersheet.ui.skills.SkillsFragment"
        android:label="@string/title_skills"
        tools:layout="@layout/fragment_skills" />

    <fragment
        android:id="@+id/navigation_other"
        android:name="com.pecawolf.charactersheet.ui.other.OtherFragment"
        android:label="@string/title_other"
        tools:layout="@layout/fragment_other">

        <action
            android:id="@+id/action_other_to_createCharacter"
            app:destination="@id/navigation_create_character" />

    </fragment>

    <fragment
        android:id="@+id/navigation_create_character"
        android:name="com.pecawolf.charactersheet.ui.character.CreateCharacterFragment"
        android:label="Character creation">

        <action
            android:id="@+id/action_createCharacter_to_home"
            app:destination="@id/navigation_home" />

    </fragment>

    <fragment
        android:id="@+id/navigation_choose_character"
        android:name="com.pecawolf.charactersheet.ui.character.ChooseCharacterFragment"
        android:label="Character selection">

        <action
            android:id="@+id/action_chooseCharacter_to_createCharacter"
            app:destination="@id/navigation_create_character" />

    </fragment>

</navigation>