<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/loadouts_card"
                style="@style/Card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/header_guide"
                app:layout_constraintEnd_toStartOf="@id/damage_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/loadout_header"
                        style="@style/Text.Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_item_header_loadout" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/loadout_combat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_loadout_combat_active"
                        app:text="@string/new_item_loadout_combat"
                        app:uncheckedSrc="@drawable/ic_loadout_combat_inactive" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/loadout_social"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_loadout_social_active"
                        app:text="@string/new_item_loadout_social"
                        app:uncheckedSrc="@drawable/ic_loadout_social_inactive" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/loadout_travel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_loadout_travel_active"
                        app:text="@string/new_item_loadout_travel"
                        app:uncheckedSrc="@drawable/ic_loadout_travel_inactive" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/damage_card"
                style="@style/Card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/header_guide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/loadouts_card"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/damage_header"
                        style="@style/Text.Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_item_header_damage" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/damage_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_checkmark_active"
                        app:isChecked="false"
                        app:text="@string/new_item_damage_light"
                        app:uncheckedSrc="@drawable/ic_checkmark_inactive" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/damage_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_checkmark_active"
                        app:isChecked="false"
                        app:text="@string/new_item_damage_medium"
                        app:uncheckedSrc="@drawable/ic_checkmark_inactive" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/damage_heavy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_checkmark_active"
                        app:isChecked="false"
                        app:text="@string/new_item_damage_heavy"
                        app:uncheckedSrc="@drawable/ic_checkmark_inactive" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/header_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:constraint_referenced_ids="loadouts_card,damage_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/ammo_card"
                style="@style/Card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_guide">

                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Text.Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_item_ammunition_header" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/magazine_size_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_2"
                        android:hint="@string/new_item_magazine_size_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/magazine_size_input"
                            style="@style/Input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rate_of_fire_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_2"
                        android:hint="@string/new_item_rate_of_fire_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rate_of_fire_input"
                            style="@style/Input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/wield_card"
                style="@style/Card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/damage_types_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ammo_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/Box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/wield_header"
                        style="@style/Text.Header"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/new_item_wield_header"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/wield_one_handed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_checkmark_active"
                        app:isChecked="false"
                        app:layout_constraintEnd_toStartOf="@id/wield_two_handed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/wield_header"
                        app:text="@string/wield_one_handed"
                        app:uncheckedSrc="@drawable/ic_checkmark_inactive" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/wield_two_handed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_checkmark_active"
                        app:isChecked="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/wield_one_handed"
                        app:layout_constraintTop_toBottomOf="@id/wield_header"
                        app:text="@string/wield_two_handed"
                        app:uncheckedSrc="@drawable/ic_checkmark_inactive" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/wield_mounted"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:checkedSrc="@drawable/ic_checkmark_active"
                        app:isChecked="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/wield_drone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/wield_one_handed"
                        app:text="@string/wield_mounted"
                        app:uncheckedSrc="@drawable/ic_checkmark_inactive" />

                    <com.pecawolf.charactersheet.ui.view.TwoStateImageCheckView
                        android:id="@+id/wield_drone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:visibility="invisible"
                        app:checkedSrc="@drawable/ic_checkmark_active"
                        app:isChecked="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/wield_mounted"
                        app:layout_constraintTop_toBottomOf="@id/wield_two_handed"
                        app:text="@string/wield_drone"
                        app:uncheckedSrc="@drawable/ic_checkmark_inactive" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/damage_types_card"
                style="@style/Card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wield_card">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/damage_types_header"
                        style="@style/Text.Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_item_protection_types_header" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/damage_types_recycler"
                        style="@style/Box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_simple_selection" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        style="@style/Button.Positive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/generic_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>